@startuml "Calculator"
package "Widgets UI" {

class StatelessWidget {
  + build(BuildContext context): Widget
}

class Button {
  - static const Color darkGray
  - static const Color defaultGray
  - static const Color orangeOperator
  - final String buttonText
  - final bool bigButton
  - final Color color
  - final void Function(String) cb
  - static const EdgeInsets buttonPadding
  - static const TextStyle buttonTextStyle
'   + Button({Key? key, required String buttonText, bool bigButton = false, Color color = defaultGray, required void Function(String) cb})
  + Widget build(BuildContext context)
}

Button ..|> StatelessWidget : extends

class ButtonRow {
  - final List<Button> buttons
  - final double spacing
  + ButtonRow(List<Button> buttons, {double spacing = 1.0, Key? key})
  + Widget build(BuildContext context)
  - List<Widget> _buildChildren(double effectiveSpacing)
}

ButtonRow ..|> StatelessWidget : extends
ButtonRow o-- Button : contains

class Keyboard {
  - static const double _keyboardHeight
  - static const double _buttonSpacing
  - Button _buildButton({required String text, bool bigButton = false, Color? color})
  + Keyboard({Key? key, required void Function(String) cb})
  + Widget build(BuildContext context)
}

Keyboard ..|> StatelessWidget : extends
Keyboard o-- ButtonRow : contains
Keyboard o-- Button : creates

class AutoSizeText {
  - String text
  - TextStyle style
  - int maxLines
  - double minFontSize
  - double maxFontSize
  + AutoSizeText()
}

class Display {
  - static const Color _backgroundColor
  - static const EdgeInsets _padding
  - static const double _minFontSize
  - static const double _maxFontSize
  - static const int _maxLines
  - static TextStyle _getTextStyle()
  + Display({Key? key, String displayText = "0"})
  + Widget build(BuildContext context)
}

Display ..|> StatelessWidget : extends
Display o-- AutoSizeText : contains

class Calculator extends StatelessWidget {
  - Memory memory
  + Calculator({required Memory memory})
  + build(BuildContext context): Widget
}

  Calculator <|-- StatelessWidget
  Calculator o-- Keyboard : contains
  Calculator o-- Display : contains
}
@enduml